# pay-cripto

./: README.md
backend/: .env  Cargo.toml  zanvexis.db
backend/src/: handlers.rs  main.rs  models.rs
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: ZanvexisCore.tsx
frontend/app/dashboard/: page.tsx
frontend/app/pay/[id]/: page.tsx
